crates/kul-wasm/tests/snapshots/export_graph__example_09_family_across_a_century_cytoscape.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "nodes": [
      {
        "data": {
          "id": "p:oludare",
          "type": "person",
          "name": "Oludare Adeyemi",
          "family": "Adeyemi",
          "given": "Oludare",
          "gender": "male",
          "born": {
            "value": "1905",
            "precision": "year",
            "circa": true
          },
          "died": {
            "value": "1980-07-04",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:folake",
          "type": "person",
          "name": "Folake Adeyemi",
          "family": "Adeyemi",
          "given": "Folake",
          "gender": "female",
          "born": {
            "value": "1910-03",
            "precision": "month",
            "circa": false
          },
          "died": {
            "value": "1995-11-20",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:babatunde",
          "type": "person",
          "name": "Babatunde Adeyemi",
          "gender": "male",
          "born": {
            "value": "1930",
            "precision": "year",
            "circa": false
          },
          "died": {
            "value": "2005-02-18",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:adunni",
          "type": "person",
          "name": "Adunni Adeyemi",
          "gender": "female",
          "born": {
            "value": "1933-08",
            "precision": "month",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:kehinde",
          "type": "person",
          "name": "Kehinde Adeyemi",
          "gender": "male",
          "born": {
            "value": "1936",
            "precision": "year",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:yetunde",
          "type": "person",
          "name": "Yetunde Adeyemi",
          "gender": "female",
          "born": {
            "value": "1935-02-28",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:amaka",
          "type": "person",
          "name": "Amaka Adeyemi",
          "gender": "female",
          "born": {
            "value": "1940-06-17",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:chukwu",
          "type": "person",
          "name": "Chukwu Okafor",
          "gender": "male",
          "born": {
            "value": "1931-10-05",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:simisola",
          "type": "person",
          "name": "Simisola Bello",
          "gender": "female",
          "born": {
            "value": "1940-12-01",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:titi",
          "type": "person",
          "name": "Titi Adeyemi",
          "gender": "female",
          "born": {
            "value": "1945-05-09",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:femi",
          "type": "person",
          "name": "Femi Bello",
          "gender": "male",
          "born": {
            "value": "1938-11-22",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:nnamdi",
          "type": "person",
          "name": "Nnamdi Okafor",
          "gender": "male",
          "born": {
            "value": "1905",
            "precision": "year",
            "circa": true
          }
        }
      },
      {
        "data": {
          "id": "p:chiamaka",
          "type": "person",
          "name": "Chiamaka Okafor",
          "gender": "female",
          "born": {
            "value": "1908",
            "precision": "year",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:obi",
          "type": "person",
          "name": "Obi Eze",
          "gender": "male",
          "born": {
            "value": "1880",
            "precision": "year",
            "circa": true
          }
        }
      },
      {
        "data": {
          "id": "p:ngozi",
          "type": "person",
          "name": "Ngozi Eze",
          "gender": "female",
          "born": {
            "value": "1885",
            "precision": "year",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:tunde",
          "type": "person",
          "name": "Tunde Adeyemi",
          "gender": "male",
          "born": {
            "value": "1957-04-19",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:bisi",
          "type": "person",
          "name": "Bisi Adeyemi",
          "gender": "female",
          "born": {
            "value": "1960-04",
            "precision": "month",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:segun",
          "type": "person",
          "name": "Segun Adeyemi",
          "gender": "male",
          "born": {
            "value": "1964-08-30",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:ada",
          "type": "person",
          "name": "Ada Okafor",
          "gender": "female",
          "born": {
            "value": "1960-01-22",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:emeka",
          "type": "person",
          "name": "Emeka Okafor",
          "gender": "male",
          "born": {
            "value": "1963-07-14",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:dayo",
          "type": "person",
          "name": "Dayo Adeyemi",
          "gender": "male",
          "born": {
            "value": "1965-03-08",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:lola",
          "type": "person",
          "name": "Lola Adeyemi",
          "gender": "female",
          "born": {
            "value": "1980-10-25",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:kunle",
          "type": "person",
          "name": "Kunle Bello",
          "gender": "male",
          "born": {
            "value": "1982-12-30",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:halima",
          "type": "person",
          "name": "Halima Sani",
          "gender": "female",
          "born": {
            "value": "1960-09-11",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:tunji",
          "type": "person",
          "name": "Tunji Adeyemi",
          "gender": "male",
          "born": {
            "value": "1958-06-04",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:folasade",
          "type": "person",
          "name": "Folasade Okafor",
          "gender": "female",
          "born": {
            "value": "1965-02-07",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:ronke",
          "type": "person",
          "name": "Ronke Adeyemi",
          "gender": "female",
          "born": {
            "value": "1968-04-13",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:zainab",
          "type": "person",
          "name": "Zainab Adeyemi",
          "gender": "female",
          "born": {
            "value": "1985-01-17",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:kemi",
          "type": "person",
          "name": "Kemi Adeyemi",
          "gender": "female",
          "born": {
            "value": "1990-07-29",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:tobi",
          "type": "person",
          "name": "Tobi Adeyemi",
          "gender": "male",
          "born": {
            "value": "1987-09-02",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:ife",
          "type": "person",
          "name": "Ife Okafor",
          "gender": "other",
          "born": {
            "value": "1993-03-11",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:dele",
          "type": "person",
          "name": "Dele Adeyemi",
          "gender": "male",
          "born": {
            "value": "1994-10-08",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_oludare_folake",
          "type": "marriage",
          "start": {
            "value": "1928-04-10",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_babatunde_yetunde",
          "type": "marriage",
          "start": {
            "value": "1955-06-12",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_babatunde_amaka",
          "type": "marriage",
          "start": {
            "value": "1962-09-03",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_adunni_chukwu",
          "type": "marriage",
          "start": {
            "value": "1958-03-20",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_kehinde_simisola",
          "type": "marriage",
          "start": {
            "value": "1962-01-15",
            "precision": "day",
            "circa": false
          },
          "end": {
            "value": "1975-08-09",
            "precision": "day",
            "circa": false
          },
          "endReason": "divorce"
        }
      },
      {
        "data": {
          "id": "m:m_kehinde_titi",
          "type": "marriage",
          "start": {
            "value": "1978-05-22",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_simisola_femi",
          "type": "marriage",
          "start": {
            "value": "1980-02-14",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_nnamdi_chiamaka",
          "type": "marriage",
          "start": {
            "value": "1929-07-18",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_obi_ngozi",
          "type": "marriage",
          "start": {
            "value": "1905-02-11",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_tunde_halima",
          "type": "marriage",
          "start": {
            "value": "1982-07-07",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_bisi_tunji",
          "type": "marriage",
          "start": {
            "value": "1985-11-19",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_emeka_folasade",
          "type": "marriage",
          "start": {
            "value": "1990-08-15",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_segun_ronke",
          "type": "marriage",
          "start": {
            "value": "1992-05-26",
            "precision": "day",
            "circa": false
          }
        }
      }
    ],
    "edges": [
      {
        "data": {
          "source": "m:m_oludare_folake",
          "target": "p:oludare",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_oludare_folake",
          "target": "p:folake",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_babatunde_yetunde",
          "target": "p:babatunde",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_babatunde_yetunde",
          "target": "p:yetunde",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_babatunde_amaka",
          "target": "p:babatunde",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_babatunde_amaka",
          "target": "p:amaka",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_adunni_chukwu",
          "target": "p:adunni",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_adunni_chukwu",
          "target": "p:chukwu",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_kehinde_simisola",
          "target": "p:kehinde",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_kehinde_simisola",
          "target": "p:simisola",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_kehinde_titi",
          "target": "p:kehinde",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_kehinde_titi",
          "target": "p:titi",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_simisola_femi",
          "target": "p:simisola",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_simisola_femi",
          "target": "p:femi",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_nnamdi_chiamaka",
          "target": "p:nnamdi",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_nnamdi_chiamaka",
          "target": "p:chiamaka",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_obi_ngozi",
          "target": "p:obi",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_obi_ngozi",
          "target": "p:ngozi",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_tunde_halima",
          "target": "p:tunde",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_tunde_halima",
          "target": "p:halima",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_bisi_tunji",
          "target": "p:bisi",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_bisi_tunji",
          "target": "p:tunji",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_emeka_folasade",
          "target": "p:emeka",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_emeka_folasade",
          "target": "p:folasade",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_segun_ronke",
          "target": "p:segun",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_segun_ronke",
          "target": "p:ronke",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_oludare_folake",
          "target": "p:babatunde",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_oludare_folake",
          "target": "p:adunni",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_oludare_folake",
          "target": "p:kehinde",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_nnamdi_chiamaka",
          "target": "p:chukwu",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_obi_ngozi",
          "target": "p:chiamaka",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_babatunde_yetunde",
          "target": "p:tunde",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_babatunde_yetunde",
          "target": "p:bisi",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_babatunde_amaka",
          "target": "p:segun",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_adunni_chukwu",
          "target": "p:ada",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_adunni_chukwu",
          "target": "p:emeka",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_kehinde_simisola",
          "target": "p:dayo",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_kehinde_titi",
          "target": "p:lola",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_simisola_femi",
          "target": "p:kunle",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_tunde_halima",
          "target": "p:zainab",
          "type": "adoptive_child",
          "start": {
            "value": "1988-06-04",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "source": "m:m_tunde_halima",
          "target": "p:kemi",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_bisi_tunji",
          "target": "p:tobi",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_emeka_folasade",
          "target": "p:ife",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_segun_ronke",
          "target": "p:dele",
          "type": "biological_child"
        }
      }
    ]
  }
}
